# extended-asteroids

./: .gitignore  CMakeLists.txt  LICENSE  build.sh
src/: CMakeLists.txt  main.cpp
src/entity/: asteroid.hpp  entity.hpp  mooncoin.hpp  rover.hpp
src/util/: ltmath.hpp  typedef.hpp  util.hpp
src/view/: smoothcam.hpp  world.hpp
static/: asteroids.ini
static/res/music/: LICENSE
